...
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/grey_rounded_background_10">


            <ImageView
                android:id="@+id/arrow_extra_unique"
                android:layout_width="30dp"
                android:layout_height="14dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/black_down_arrow" />

...
                    android:layout_marginTop="10dp"
                    android:text="Price Range"
                    android:textColor="@color/black"
                    android:textSize="22dp" />

                <EditText
                    android:id="@+id/priceMin"
                    android:hint="min"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="0dp"
                    android:textColor="@color/black"
                    android:paddingBottom="2dp"
                    android:textSize="22dp" />

                <EditText
                    android:id="@+id/priceMax"
                    android:hint="max"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="0dp"
                    android:textColor="@color/black"
                    android:paddingBottom="2dp"
                    android:textSize="22dp" />

                <Switch
                    android:id="@+id/classic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:track="@drawable/switch_track"
                    android:thumb="@drawable/switch_thumb"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="80dp"
...
                    android:checked="true"
                    android:paddingRight="20dp"
                    android:textSize="22dp"
                    android:switchPadding="15dp"/>

                <Switch
                    android:id="@+id/electric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:track="@drawable/switch_track"
                    android:thumb="@drawable/switch_thumb"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="115dp"
...
                    android:checked="true"
                    android:textSize="22dp"
                    android:switchPadding="15dp"/>


                <Button
                    android:id="@+id/filterApply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="200dp"
                    android:layout_marginTop="90dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textFontWeight="500"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonRentNow"
        style="@style/GreenButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:background="@drawable/green_button_rounded"
        android:elevation="4dp"
        android:fontFamily="@font/poppins_bold"
...
        app:layout_constraintEnd_toEndOf="@+id/background_view"
        app:layout_constraintStart_toStartOf="@+id/background_view"
        app:layout_constraintTop_toTopOf="@+id/background_view"
        app:layout_constraintVertical_bias="0.5" />

    <FrameLayout
        android:id="@+id/message_renter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="6dp"
        android:clickable="true"
        android:elevation="4dp"
...
            android:elevation="4dp"
            android:text="Messaging" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:elevation="4dp"
...
