...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_arrow_very_unique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            android:contentDescription="Back Arrow"
            android:gravity="center"
            android:layout_marginStart="16dp"
...
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/payment_method_name"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="Card Nickname"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/grey_rounded_background_15"
            android:paddingLeft="50dp"
            android:layout_marginHorizontal="16dp"/>

        <EditText
            android:id="@+id/card_holder_name"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="Cardholder Name"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/grey_rounded_background_15"
            android:paddingLeft="50dp"
            android:layout_marginHorizontal="16dp"/>

        <EditText
            android:id="@+id/card_number"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="Card Number"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/grey_rounded_background_15"
...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="16dp">

            <EditText
                android:id="@+id/expiry_date"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:hint="Expiry (MM/YY)"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
...
                android:background="@drawable/grey_rounded_background_15"
                android:paddingLeft="50dp"
                android:layout_marginEnd="8dp"/>


            <EditText
                android:id="@+id/cvv"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:hint="Card CVV"
                android:padding="16dp"
                android:layout_marginBottom="16dp"
...
<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Save Payment Method"-->
<!--            android:layout_marginTop="24dp" />-->
        <Button
            android:id="@+id/save_payment_method_button"
            style="@style/GreenButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/green_button_rounded"
            android:text="Save Payment Method"
            android:fontFamily="@font/poppins_bold"
...
