...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <EditText
        android:id="@+id/bikeName"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:hint="Name"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
...
        app:layout_constraintTop_toBottomOf="@+id/textViewAppName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <EditText
        android:id="@+id/bikePrice"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:hint="Price"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
...
        android:paddingLeft="50dp"
        app:layout_constraintTop_toBottomOf="@+id/bikeName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/bikeLocation"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:hint="Location"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
...
        android:paddingLeft="50dp"
        app:layout_constraintTop_toBottomOf="@+id/bikePrice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/bikeRating"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:hint="Rating"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/grey_rounded_background_15"
        android:paddingLeft="50dp"
        app:layout_constraintTop_toBottomOf="@+id/useCurrentLocation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonCreateBike"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/green_outline"
        android:text="@string/create_bike"
        android:textColor="@color/green"
...
