...
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:notificationsText="Saved"
            app:speakerIcon="@drawable/saved_setting" />

        <com.example.as1.CustomComponent
            android:id="@+id/inventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="420dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:notificationsText="Inventory"
            app:speakerIcon="@drawable/inventory" />

        <com.example.as1.CustomComponent
            android:id="@+id/messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="492dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:notificationsText="Messages"
            app:speakerIcon="@drawable/message_setting" />

        <com.example.as1.CustomComponent
            android:id="@+id/payment_methods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="564dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
...
            android:layout_marginTop="700dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:notificationsText="Become a rider"
            app:speakerIcon="@drawable/become_renter_setting" />

        <com.example.as1.CustomComponent
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="772dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
...
